appId: co.openvine.app.staging
---
- assertVisible:
    id: profile_pending_action
- tapOn:
    id: profile_pending_action
- assertVisible: Secure Your Account
- assertVisible: Add email & password to recover your account on any device
- assertVisible: Add Email & Password
- tapOn: Maybe Later

- assertVisible: Complete Your Profile
- assertVisible: Add your name, bio, and picture to get started
- assertVisible: Update Your Profile
- tapOn: Maybe Later

#assert other profile items:
- runFlow: assertProfile.yaml

- assertNotVisible:
    text: Loading...
    optional: true
- assertVisible: No videos yet
- scroll
- assertVisible: Your stage is set. Start posting and your videos will live here.
